--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
 }
 
-button {
+.update-button {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -26,7 +26,55 @@ button {
     transition-duration: 0.7s;
 }
 
-button:hover {
+.update-button:hover {
     background-color: pink;
     transform:translate(-50%, -50%) scale(1.5);
 }
+
+.timer {
+    font-family: sans-serif;
+    display: inline-block;
+    padding: 24px 32px;
+    border-radius: 30px;
+    background: white;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .timer__part {
+    font-size: 36px;
+    font-weight: bold;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+  }
+  
+  .timer__btn {
+    width: 50px;
+    height: 50px;
+    margin-left: 16px;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    background: #8208e6;
+    cursor: pointer;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+  }
+  
+  .timer__btn--start {
+    background: #00b84c;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+  }
+  
+  .timer__btn--stop {
+    background: #ff0256;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+  }
