Fixed the timer position

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
     transform:translate(-50%, -50%) scale(1.5);
 }
 
+/* white background for digits */
 .timer {
     font-family: sans-serif;
     display: inline-block;
@@ -43,14 +44,17 @@ body {
     transform: translate(-50%, -50%);
   }
   
+  /* digits */
   .timer__part {
     font-size: 36px;
     font-weight: bold;
     position: absolute;
     top: 60%;
     left: 50%;
+    transform: translate(-50%, -50%);
   }
   
+  /* purple button */
   .timer__btn {
     width: 50px;
     height: 50px;
@@ -62,19 +66,23 @@ body {
     cursor: pointer;
     position: absolute;
     top: 60%;
-    left: 50%;
+    left: 115%;
+    transform: translate(-50%, -50%);
   }
   
+  /* green button */
   .timer__btn--start {
     background: #00b84c;
     position: absolute;
     top: 60%;
-    left: 50%;
+    left: -70%;
+    transform: translate(-50%, -50%);
   }
   
   .timer__btn--stop {
     background: #ff0256;
     position: absolute;
     top: 60%;
-    left: 50%;
+    left: -70%;
+    transform: translate(-50%, -50%);
   }
