--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,10 @@ body {
     margin: 0;
 }
 
-.update-button {
+.update-button,
+.popup-button,
+#demo {
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px 40px;
@@ -26,9 +27,22 @@ body {
     transition-duration: 0.7s;
 }
 
-.update-button:hover {
+.update-button{
+    top: 45%;
+}
+
+.popup-button{
+    top: 60%;
+}
+
+#demo{
+    top: 75%;
+}
+
+.update-button:hover,
+.popup-button:hover {
     background-color: pink;
-    transform:translate(-50%, -50%) scale(1.5);
+    transform:translate(-50%, -50%) scale(1.1);
 }
 
 /* white background for digits */
